fix wrong size of p

--- a/media/css/fuzzyform.css
+++ b/media/css/fuzzyform.css
@@ -22,7 +22,7 @@
 
 .fuzzyform p {
     color: #999;
-    font-size: 0.8em;
+    font-size: 0.9em;
 }
 
 #text .fuzzyform ul {
